# singularity-runners

./: .gitignore  .pre-commit-config.yaml  README.md  Singularity  Singularity.github  Singularity.gitlab  pyproject.toml  singularity.def
.github/workflows/: pre-commit.yml
scripts/: configure.py  start.py
src/gh_runner_singularity/: cli.py  configure.py  start.py
src/singularity_runners/: cli.py  configure.py
src/singularity_runners/github/: cli.py  configure.py  start.py
src/singularity_runners/gitlab/: __init__.py  cli.py  register.py  start.py
src/singularity_runners/singularity/: Singularity.github  Singularity.gitlab
tests/: test_gh_runner_singularity.py
