[tool.black]
skip-string-normalization = true
target-version = ['py38']  # Specify your Python version
include = '\.pyi?$'
exclude = '''  # Specify the files/dirs that should be ignored by the black formatter
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
skip = "template-*.py"
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
ensure_newline_before_comments = "True"
line_length = 80

[tool.poetry]
name = "singularity-runners"
version = "0.1.0"
description = ""
authors = ["Robert Rosca <32569096+RobertRosca@users.noreply.github.com>"]
include = ["Singularity.github", "Singularity.gitlab"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
isort = "^5.6.4"
pre-commit = "^2.9.3"

[tool.poetry.extras]
formatting = ["black", "isort", "pre-commit"]

[tool.poetry.scripts]
singularity-runners = 'singularity_runners.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
